# bedrock-keys-security

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  bedrock-keys  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: codeql.yml  detections.yml  publish.yaml  tests.yml
bedrock_keys_security/: __init__.py  _version.py  cli.py
bedrock_keys_security/commands/: cleanup.py  decode.py  report.py  revoke.py  scan.py  timeline.py
bedrock_keys_security/core/: decoder.py  org.py  scanner.py
bedrock_keys_security/utils/: aws.py  cli.py  output.py
detections/: README.md
detections/athena/: bedrock-bearer-token-cross-region.sql  bedrock-spend-anomaly.sql
detections/cloudtrail-lake/: llmjacking-invocation-spike.sql  phantom-user-iam-pivot.sql
detections/cloudwatch-insights/: bearer-token-usage.txt
detections/eventbridge/: bedrock-api-key-creation.json  bedrock-api-key-usage.json  phantom-user-access-key-creation.json  phantom-user-console-login.json  phantom-user-creation.json
detections/sigma/: bedrock-api-key-creation.yml  bedrock-bearer-token-usage.yml  bedrock-cross-region-bearer-token-use.yml  bedrock-suspicious-user-agent.yml  phantom-user-access-key-creation.yml  phantom-user-creation.yml
docs/: permissions.md
iac/cloudformation/: scps.yaml
iac/terraform/: README.md  main.tf  outputs.tf
scps/: 1-block-all-keys.json  2-enforce-90day-max.json  3-block-long-term-only.json  4-block-phantom-access-keys.json
scps/cloudformation/: scps.yaml
scps/terraform/: README.md  main.tf  variables.tf
tests/: test_cli_ux.py  test_decoder.py  test_org_scan.py
