[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-keys-security"
version = "1.0.0"
description = "Security toolkit for AWS Bedrock API keys — discover phantom IAM users, decode leaked keys, automate cleanup, and enforce preventive controls."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "BeyondTrust, Phantom Labs" },
]
keywords = ["aws", "bedrock", "security", "iam", "api-keys", "incident-response"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.42.51",
    "botocore>=1.42.51",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/BeyondTrust/bedrock-keys-security"
Issues = "https://github.com/BeyondTrust/bedrock-keys-security/issues"
Discussions = "https://github.com/BeyondTrust/bedrock-keys-security/discussions"

[project.scripts]
bks = "bedrock_keys_security.cli:cli"

[tool.setuptools.packages.find]
include = ["bedrock_keys_security*"]
