[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-keys-security"
version = "1.1.0"
description = "The AWS Bedrock API keys security toolkit: offline decoder, phantom user discovery, incident response, cleanup, preventive SCPs and detection content."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Sergio Garcia (MrCloudSec)", email = "hello@mistercloudsec.com" },
]
keywords = ["aws", "bedrock", "security", "iam", "api-keys", "incident-response", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.42.51,<2.0",
    "botocore>=1.42.93,<2.0",
    "click>=8.1.0,<9.0",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/BeyondTrust/bedrock-keys-security"
Issues = "https://github.com/BeyondTrust/bedrock-keys-security/issues"

[project.scripts]
bks = "bedrock_keys_security.cli:cli"

[tool.setuptools.packages.find]
include = ["bedrock_keys_security*"]
